using UnityEngine;
namespace My2D
{
    public class AnimationString : MonoBehaviour
    {
        public static string isMoving = "IsMoving";
        public static string isRunning = "IsRunning";
        public static string jumpTrigger = "Jump";
        public static string yVelocity = "YVelocity";
        public static string isGround = "IsGround";
        public static string isCelling = "IsCelling";
        public static string isWall = "IsWall";
        public static string attackTrigger = "Attack";
        public static string bowattackTrigger = "BowAttack";
        public static string hasTarget = "HasTarget";
        public static string cannotMove  = "CannotMove";
        public static string cooldownTime  = "CoolDownTime";
        public static string hitTrigger = "Hit";
        public static string lockVelocity = "LockVelocity";
        public static string isDeath = "IsDeath";
        
    }
}